--- a/podcast/public/index.html
+++ b/podcast/public/index.html
@@ -5,9 +5,9 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="" content="" />
+    <meta name="" content=" a kind of harmony podcast sound healing sound art julia e dyck amanda harvey" />
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="../public/favicon.ico" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -28,6 +28,7 @@
       href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Work+Sans:wght@400;500&display=swap"
       rel="stylesheet"
     />
+   <title>A KIND OF HARMONY PODCAST</title> 
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
