--- a/podcast/public/index.html
+++ b/podcast/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="" content=" a kind of harmony podcast sound healing sound art julia e dyck amanda harvey" />
+    <meta name="a kind of harmony podcast" content=" a kind of harmony podcast sound healing sound art julia e dyck amanda harvey" />
 
     <link rel="apple-touch-icon" href="../public/favicon.ico" />
     <!--
