--- a/podcast/public/index.html
+++ b/podcast/public/index.html
@@ -5,8 +5,9 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="a kind of harmony podcast" content=" a kind of harmony podcast sound healing sound art julia e dyck amanda harvey" />
+    <meta name="description" content=" a kind of harmony podcast sound healing sound art julia e dyck amanda harvey" />
 
+    <meta name="keywords" content="sound art, Beverly Glenn-Copeland, sound healing, podcast, canadian art, sound art canada, hypnosis, pyschotherapy, music, sound studies, afrofuturism, affect, pauline oliveros, sonic meditation ">
     <link rel="apple-touch-icon" href="../public/favicon.ico" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
